--- a/index.qmd
+++ b/index.qmd
@@ -59,11 +59,12 @@ for you to solve independently at your own pace.
 - **Solutions**: [Exercise 2 Solutions](exercises/U2.qmd)
 - **Mini-slides**: [Tips for using AI](slides/llm_use.pdf)
 
-#### Lecture 4: Parallelization and Scatterplot Smoothing - **Slides:**
-[Parallelization and Scatterplot Smoothing](slides/lecture4.pdf) - **Reading:**
-[Chapter 3 (CSwR)](https://cswr.nrhstat.org/bivariate.html) - **Exercises:**
-[3.4 (Chapter 3, CSWR)](https://cswr.nrhstat.org/bivariate#bivariate:ex)
+#### Lecture 4: Parallelization and Scatterplot Smoothing
 
+- **Slides:** [Parallelization and Scatterplot Smoothing](slides/lecture4.pdf)
+- **Reading:** [Chapter 3 (CSwR)](https://cswr.nrhstat.org/bivariate.html)
+- **Exercises:** [3.4 (Chapter 3,
+  CSWR)](https://cswr.nrhstat.org/bivariate#bivariate:ex)
 
 ### Week 3
 
